src/index.css
@import 'tailwindcss';

@font-face {
  font-family: 'Open Sans';
  src: url('/src/assets/fonts/Open_Sans/OpenSans-Regular.woff2') format('woff2'),
    url('/src/assets/fonts/Open_Sans/OpenSans-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src: url('/src/assets/fonts/Open_Sans/OpenSans-SemiBold.woff2') format('woff2'),
    url('/src/assets/fonts/Open_Sans/OpenSans-SemiBold.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src: url('/src/assets/fonts/Open_Sans/OpenSans-Bold.woff2') format('woff2'),
    url('/src/assets/fonts/Open_Sans/OpenSans-Bold.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Inter';
  src: url('/src/assets/fonts/Inter/Inter_24pt-SemiBold.woff2') format('woff2'),
    url('/src/assets/fonts/Inter/Inter_24pt-SemiBold.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Aclonica';
  src: url('/src/assets/fonts/Aclonica/Aclonica-Regular.woff2') format('woff2'),
    url('/src/assets/fonts/Aclonica-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@theme {
  --font-primary: 'Open Sans', 'sans-serif';
  --font-second: 'Inter', 'sans-serif';
  --font-third: 'Aclonica', 'sans-serif';

  --color-fire: #aa4700;
  --color-tenn: #cf5600;
  --color-fiery-orange: #b74c00;
  --color-mineShaft: #2f2f2f;
  --color-alabaster: #f9f9f9;
  --color-cod-gray: #0f0f0f;
  --color-gray-400: #808080;
  --color-red-beech: #6d2e01;
  --color-fiery-tenn: #ce5601;
  --color-red-tenn: #bf0000;
  --color-hot-cinnamon-500: #d9732b;
  --color-chicago-600: #5b5959;
  --color-disabled: rgba(217, 115, 43, 0.46);
  /* --color-wildSand: #f5f5f5; */
  /* --color-woodsmoke: #191919; */
  --color-shark: #272727;
  --color-storm-dust: #656565;

  --shadow-box: 0 2px 4px 0 rgba(0, 0, 0, 0.25);
  --shadow-shark: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
  --shadow-smoke: 0 1px 4px 4px rgba(0, 0, 0, 0.25);
  --shadow-inset-shark: inset 0 4px 4px 0 rgba(0, 0, 0, 0.25);
}

@layer base {
  html {
    @apply font-sans;
    scrollbar-gutter: stable;
  }

  body {
    @apply font-primary text-cod-gray bg-alabaster text-base leading-[1.37];
    scrollbar-gutter: stable;
  }
}

button:not(:disabled) {
  cursor: pointer;
}

@layer components {
  .btn {
    @apply bg-tenn text-alabaster rounded-2xl px-5 min-w-[200px] h-[40px] transition-shadow duration-300 ease-in-out;
  }

  .btn:hover,
  .btn:focus {
    @apply shadow-shark outline-none;
  }

  .btn:active {
    box-shadow: var(--shadow-inset-shark);
  }

  .btn-lg {
    @apply min-w-[304px];
  }

  .btn-2lg {
    @apply min-w-[304px] min-h-[68px] text-xl;
  }

  .btn-disabled {
    @apply bg-disabled cursor-not-allowed;

    @variant hover {
      @apply shadow-none;
    }

    @variant active {
      @apply shadow-none;
    }
  }

  .btn-google-disabled {
    @apply text-gray-400 bg-alabaster border-2 border-gray-400;
  }

  .btn-icon {
    @apply relative flex items-center justify-center pl-7;
  }

  .input-base {
    @apply relative w-full border-2 border-tenn/40 rounded-2xl h-[40px] px-5 focus:outline-none caret-fire placeholder-gray-400 focus:border-tenn;
  }

  .book-radio-btn {
    @apply appearance-none relative w-[21px] h-[21px] rounded-full border-2 border-fire checked:bg-alabaster checked:border-fire focus:outline-none cursor-pointer transition-all duration-300 ease-in-out;
  }

  .book-radio-btn:focus-visible {
    @apply ring-2 ring-offset-2 ring-fire;
  }

  .book-radio-btn:checked::before {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 13px;
    height: 13px;
    border-radius: 50%;
    background-color: var(--color-tenn);
  }

  .no-scrollbar {
    scrollbar-width: none;
    /* Firefox */
    -ms-overflow-style: none;
    /* IE 10+ */
  }

  .no-scrollbar::-webkit-scrollbar {
    display: none;
    /* Chrome, Safari, Opera */
  }
}

.book-checkbox-btn+span {
  @apply fill-none;
}

.book-checkbox-btn:checked+span {
  @apply bg-tenn fill-alabaster border-tenn;
}

